OCPBUGS-40850/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ocpbugs40850-test
  annotations:
    service.beta.openshift.io/serving-cert-secret-name: serving-cert-ocpbugs40850-test
spec:
  selector:
    app: ocpbugs40850-test
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 8080
  - name: https
    protocol: TCP
    port: 443
    targetPort: 8443
